--- a/MinersProsperity/.gitignore
+++ b/MinersProsperity/.gitignore
@@ -1,21 +1,83 @@
-# gradle
-.gradle/
-build/
-out/
-classes/
-# eclipse and vscode
-*.launch
-.settings/
-.vscode/
+.nopublish
+
+### Windows ###
+
+thumbs.db
+*.db
+
+### Java ###
+
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.war
+*.ear
+*.txt
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+### Eclipse ###
+
+*.pydevproject
+.metadata
+.gradle
 bin/
-.classpath
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+/eclipse
+
+# Eclipse Core
 .project
-# intellij
-.idea/
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# CDT-specific
+.cproject
+
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
+# Java annotation processor (APT)
+.factorypath
+
+# PDT-specific
+.buildpath
+
+# sbteclipse plugin
+.target
+
+# TeXlipse plugin
+.texlipse
+
+### Intellij IDEA ###
+
 *.iml
 *.ipr
 *.iws
-# apple: think different:tm:
-*.DS_Store
-# run configurations
+
+.idea/
+.idea_modules/
+/classes/
+/out/
+/build/
+
+# Linux
+*~
+
 run/
+
+logs/
