--- a/MinersProsperity/gradle.properties
+++ b/MinersProsperity/gradle.properties
@@ -7,10 +7,10 @@ modGroup = net.vyroxes.minersprosperity
 
 # Version of your mod.
 # This field can be left empty if you want your mod's version to be determined by the latest git tag instead.
-modVersion = 1.0-1.12.2
+modVersion = 1.0
 
 # Whether to use the old jar naming structure (modid-mcversion-version) instead of the new version (modid-version)
-includeMCVersionJar = false
+includeMCVersionJar = true
 
 # The name of your jar when you produce builds, not including any versioning info
 modArchivesBaseName = minersprosperity
@@ -32,8 +32,14 @@ developmentEnvironmentUserName = Developer
 # Using this requires that you use a Java 17 JDK for development.
 enableModernJavaSyntax = true
 
+# Enables runClient/runServer tasks for Java 17 and Java 21 using LWJGL3ify.
+# This is primarily used to test if your mod is compatible with platforms running
+# Minecraft 1.12.2 on modern versions of Java and LWJGL, and assist in fixing any problems with it.
+# Using this requires that you use a Java 17/Java 21 JDK for development.
+enableJava17RunTasks = false
+
 # Generate a class with String fields for the mod id, name and version named with the fields below
-generateGradleTokenClass = com.myname.mymodid.Tags
+generateGradleTokenClass = net.vyroxes.minersprosperity.Tags
 gradleTokenModId = MODID
 gradleTokenModName = MODNAME
 gradleTokenVersion = VERSION
